--- a/src/styles/Searchbar.module.css
+++ b/src/styles/Searchbar.module.css
@@ -1,5 +1,4 @@
 .form{
-    padding: 2rem;
     opacity: 0.8;
 }
 
@@ -7,7 +6,7 @@
     background-color: rgba(255,255,255,40);
     border: none;
     border-radius: 5px;
-    margin: 15px;
+    margin-right: 15px;
     padding: 0 10px;
     height: 4vh;
 }
